# KageClaw

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy_guide.md  docker-compose.yml  entrypoint.sh  kageclaw.spec  pyproject.toml  shibaclaw.spec  update_manifest.json
bridge/: package-lock.json  package.json  tsconfig.json
bridge/src/: index.ts  server.ts  whatsapp.ts
kageclaw/: __init__.py  __main__.py
kageclaw-channel-whatsapp/: pyproject.toml
kageclaw-channel-whatsapp/kageclaw_channel_whatsapp/: __init__.py  channel.py
kageclaw-channel-whatsapp/kageclaw_channel_whatsapp/bridge/src/: types.d.ts  whatsapp.ts
kageclaw-tts-supertonic/: pyproject.toml
kageclaw-tts-supertonic/kageclaw_tts_supertonic/: __init__.py  engine.py
kageclaw/agent/: __init__.py  context.py  loop.py  memory.py  profiles.py  skills.py  subagent.py
kageclaw/agent/tools/: __init__.py  automation.py  browser.py  filesystem.py  mcp.py  memory_search.py  message.py  registry.py  shell.py  spawn.py  web.py
kageclaw/automation/: service.py  types.py
kageclaw/brain/: __init__.py  manager.py  routing.py
kageclaw/bus/: __init__.py  queue.py
kageclaw/cli/: __init__.py  agent.py  auth.py  base.py  commands.py  gateway.py  model_info.py  onboard.py  utils.py
kageclaw/config/: __init__.py  loader.py  paths.py  schema.py
kageclaw/desktop/: __init__.py  __main__.py  app.manifest  controller.py  launcher.py  runtime.py  tray.py  window_state.py
kageclaw/helpers/: __init__.py  evaluator.py  helpers.py  logging.py  model_ids.py  system.py
kageclaw/integrations/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  wecom.py
kageclaw/skills/: README.md
kageclaw/skills/automation/: SKILL.md
kageclaw/skills/clawhub/: SKILL.md
kageclaw/skills/github/: SKILL.md
kageclaw/skills/skill-creator/: SKILL.md
kageclaw/skills/summarize/: SKILL.md
kageclaw/skills/tmux/: SKILL.md
kageclaw/skills/weather/: SKILL.md
kageclaw/skills/windows-shell/: SKILL.md
kageclaw/templates/: AGENTS.md  SOUL.md  USER.md
kageclaw/templates/profiles/: manifest.json
kageclaw/thinkers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  custom_provider.py  github_copilot_provider.py  openai_codex_provider.py  openai_provider.py  registry.py
kageclaw/tts/: __init__.py  registry.py
kageclaw/updater/: __init__.py  apply.py  checker.py  detector.py  manifest.py  update_manifest.json
kageclaw/webui/: __init__.py  agent_manager.py  api.py  auth.py  gateway_client.py  oauth_github.py  server.py  utils.py  ws_handler.py
kageclaw/webui/routers/: auth.py  automation.py  cron.py  fs.py  gateway.py  heartbeat.py  oauth.py  onboard.py  plugins.py  profiles.py  sessions.py  settings.py  skills.py  system.py
kageclaw/webui/static/: index.css  index.html  select_session.js
shibaclaw/: __init__.py  __main__.py
shibaclaw-channel-whatsapp/: pyproject.toml
shibaclaw-channel-whatsapp/shibaclaw_channel_whatsapp/: __init__.py  channel.py
shibaclaw-channel-whatsapp/shibaclaw_channel_whatsapp/bridge/: package-lock.json
shibaclaw-tts-supertonic/: pyproject.toml
shibaclaw-tts-supertonic/shibaclaw_tts_supertonic/: __init__.py  engine.py
shibaclaw/agent/: __init__.py  context.py  loop.py  memory.py  profiles.py  skills.py  subagent.py
shibaclaw/agent/tools/: __init__.py  automation.py  base.py  browser.py  filesystem.py  mcp.py  memory_search.py  message.py  registry.py  shell.py  spawn.py  web.py
shibaclaw/automation/: TASK.md.template  __init__.py  service.py
shibaclaw/brain/: __init__.py  manager.py
shibaclaw/bus/: __init__.py  queue.py
shibaclaw/cli/: __init__.py  agent.py  auth.py  base.py  commands.py  gateway.py  model_info.py  onboard.py  utils.py
shibaclaw/config/: __init__.py  loader.py  paths.py  schema.py
shibaclaw/desktop/: __init__.py  __main__.py  app.manifest  controller.py  launcher.py  runtime.py  tray.py  window_state.py
shibaclaw/helpers/: __init__.py  evaluator.py  helpers.py  logging.py  model_ids.py  notification_manager.py  system.py
shibaclaw/integrations/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  wecom.py
shibaclaw/security/: install_audit.py  network.py
shibaclaw/skills/: README.md
shibaclaw/skills/automation/: SKILL.md
shibaclaw/templates/: AGENTS.md  SOUL.md  TASK.md  TOOLS.md
shibaclaw/thinkers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  custom_provider.py  github_copilot_provider.py  openai_codex_provider.py  openai_provider.py  registry.py
shibaclaw/tts/: __init__.py  base.py  registry.py
shibaclaw/updater/: __init__.py  apply.py  checker.py  detector.py  manifest.py  update_manifest.json
shibaclaw/webui/: __init__.py  agent_manager.py  api.py  auth.py  gateway_client.py  oauth_github.py  server.py  utils.py  ws_handler.py
tests/: test_api_routers.py  test_automation.py  test_desktop.py  test_gateway_client.py  test_heartbeat.py  test_mcp_lazy.py  test_memory.py  test_notification_manager.py  test_openai_provider.py  test_plugins_tts.py  test_provider_config.py  test_scent_builder.py  test_session_manager.py  test_system.py  test_telegram_channel.py  test_thinker_base.py  test_updater_apply.py  test_updater_checker.py  test_updater_detector.py  test_version_resolution.py  test_webui_oauth.py  test_webui_settings.py  test_whatsapp_plugin.py  test_ws_handler.py
(+88 files in other folders)
