[project]
name = "kageclaw"
version = "0.7.5"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "kageclaw contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "socksio>=1.0.0,<2.0.0",
    "msgpack>=1.2.1,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "questionary>=2.0.0,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "chardet>=3.0.2,<6.0.0",
    "openai>=2.8.0,<3.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "starlette>=1.3.1,<2.0.0",
    "aiofiles>=24.0.0,<25.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0,<7.0",
    "pywebview>=5.3,<7.0",
    "pystray>=0.19.5,<1.0.0",
    "pillow>=11.0.0,<13.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
telegram = []
slack = [
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
]
dingtalk = [
    "dingtalk-stream>=0.24.0,<1.0.0",
]
feishu = [
    "lark-oapi>=1.5.0,<2.0.0",
]
qq = [
    "qq-botpy>=1.2.0,<2.0.0",
]
wecom = [
    "wecom-aibot-sdk-python>=0.1.5",
]
matrix = [
    "matrix-nio>=0.25.2",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
    "cryptography>=46.0.7",
]
mochat = [
    "python-socketio[asyncio]>=5.12.0,<6.0.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
windows-native = [
    "pywebview>=5.3,<7.0",
    "pystray>=0.19.5,<1.0.0",
    "pillow>=11.0.0,<13.0.0",
    "pythonnet>=3.0,<4.0",
]
all-channels = [
    "kageclaw[telegram,slack,dingtalk,feishu,qq,wecom,matrix]",
]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "httpx[test]>=0.28.0,<1.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.14.0,<7.0.0",
]

[project.scripts]
kageclaw = "kageclaw.cli.commands:app"

[project.gui-scripts]
kageclaw-desktop = "kageclaw.desktop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "kageclaw/**/*.py",
    "kageclaw/**/*.json",
    "kageclaw/templates/**/*.md",
    "kageclaw/skills/**/*.md",
    "kageclaw/skills/**/*.sh",
    "kageclaw/webui/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["kageclaw"]

[tool.hatch.build.targets.wheel.sources]
"kageclaw" = "kageclaw"

[tool.hatch.build.targets.sdist]
include = [
    "kageclaw/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "N", "W"]
ignore = ["E501", "I001", "W291", "W293", "D", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.*",
]
