[project]
name = "kageclaw-tts-supertonic"
version = "0.1.0"
dependencies = [
    "supertonic",
    "onnxruntime"
]

[project.entry-points."kageclaw.tts"]
supertonic = "kageclaw_tts_supertonic.engine:SupertonicTTS"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
